# rnnoise-cli

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
res/: README.md
src/rnnoise_cli/: __init__.py  ansi.py  commands.py  exceptions.py  pretty.py  pulse.py
src/rnnoise_cli/data/: license_info.txt  rnnoise_cli.conf
src/rnnoise_cli/pulse/: __init__.py  exceptions.py  pulse.py
tests/: test_commands.py
typings/: pulsectl.pyi
