[metadata]
# replace with your username:
name = rnnoise-cli
version = 0.0.1
author = Inias Peeters
author_email = iniasp@gmail.com
description = A CLI for werman's noise-suppression-for-voice
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/IniasP/rnnoise-cli
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = true
install_requires =
    click~=7.1.2
    pulsectl~=21.3.4


[options.package_data]
rnnoise_cli = data/*

[options.data_files]
rnnoise_cli = res/librnnoise_ladspa.so

[options.entry_points]
console_scripts =
    rnnoise=rnnoise_cli:rnnoise

[options.packages.find]
where = src
